# breeze-flow

./: .gitignore  README.md  breeze_list.txt  package-lock.json  package.json
.claude/: settings.local.json
src/: App.css  App.tsx
src-tauri/: 2  Cargo.toml  app.manifest  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
