[package]
name = "breeze-flow" 
version = "0.1.0"
description = "BreezeFlow DPI Bypass Manager"
authors = ["Mert"]
edition = "2021"
build = "build.rs" 

[package.metadata.winres]
ManifestFile = "app.manifest" 

[lib]
name = "breeze_flow_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri = { version = "2.0.0", features = ["tray-icon"] }
tauri-plugin-shell = "2.0.0" 
tauri-plugin-opener = "2.0.0"
tauri-plugin-store = "2.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
rand = "0.8"
pnet = "0.35"
shlex = "1.3"
tauri-plugin-autostart = "2"
tauri-plugin-global-shortcut = "2"
